[LP-0] down to java 8