@@ -2,6 +2,7 @@ package little.pirate.autotrader.service.market;
 
 import little.pirate.autotrader.contract.market.Pair;
 import little.pirate.autotrader.converter.market.MarketDtoConverter;
+import little.pirate.autotrader.domain.market.Market;
 import little.pirate.autotrader.port.in.market.SearchMarketUseCase;
 import little.pirate.autotrader.port.in.market.command.MarketSearchCommand;
 import little.pirate.autotrader.port.in.market.dto.MarketDto;
@@ -10,6 +11,7 @@ import little.pirate.autotrader.port.out.market.MarketPort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class MarketSearchService implements SearchMarketUseCase {
@@ -25,18 +27,18 @@ public class MarketSearchService implements SearchMarketUseCase {
 
     @Override
     public List<MarketDto> getAllMarkets() {
-        var clause = new MarketClause(false);
-        var result = marketPort.getAllMarkets(clause);
+        MarketClause clause = new MarketClause(false);
+        List<Market> result = marketPort.getAllMarkets(clause);
         return marketDtoConverter.convert(result);
     }
 
     @Override
     public List<MarketDto> searchMarketsBy(MarketSearchCommand command) {
-        var clause = new MarketClause(command.isDetails());
-        var result = marketPort.getAllMarkets(clause);
-        var filtered = result.stream()
+        MarketClause clause = new MarketClause(command.isDetails());
+        List<Market> result = marketPort.getAllMarkets(clause);
+        List<Market> filtered = result.stream()
                 .filter(each -> command.getPair() == Pair.getPair(each.getMarketSymbol()))
-                .toList();
+                .collect(Collectors.toList());
         return marketDtoConverter.convert(filtered);
     }
 }
